fixed spacing in admins contact inquirys

--- a/app/admin/contact/page.module.css
+++ b/app/admin/contact/page.module.css
@@ -1,5 +1,5 @@
 .contactContent {
-  gap: 1.5rem;
+  gap: 5rem;
 }
 
 .visuallyHidden {
